<package format="2">
  <name>global_localization</name>
  <version>0.0.1</version>
  <description>Global Localization package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
